{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 185,
  "lineage": "5fbc817a-3abb-19ce-2b1e-8f72c3154cca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-09f2037a37b174485",
            "public_dns": "ec2-52-43-147-162.us-west-2.compute.amazonaws.com",
            "public_ip": "52.43.147.162",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00170ba1f08e376e1",
            "public_dns": "ec2-34-215-38-169.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.38.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0a0d4ab15f1e21e4c",
            "public_dns": "ec2-52-41-181-254.us-west-2.compute.amazonaws.com",
            "public_ip": "52.41.181.254",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-082391063d9f8600f",
            "owner_id": "079736294594",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:079736294594:loadbalancer/app/alb/e3df5bbc8a62a6c8",
            "arn_suffix": "app/alb/e3df5bbc8a62a6c8",
            "dns_name": "alb-1523874600.us-west-2.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:079736294594:loadbalancer/app/alb/e3df5bbc8a62a6c8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-02bfdd76d7fd4f22a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b7eec0dd38aa00a"
              },
              {
                "subnet_id": "subnet-025a34a133a8a4a75"
              },
              {
                "subnet_id": "subnet-0d9fcc86b294c82ce"
              }
            ],
            "subnets": [
              "subnet-00b7eec0dd38aa00a",
              "subnet-025a34a133a8a4a75",
              "subnet-0d9fcc86b294c82ce"
            ],
            "tags": {
              "Name": "alb"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "depends_on": [
            "aws_security_group.sec_lb",
            "aws_subnet.PublicSubnetA",
            "aws_subnet.PublicSubnetB",
            "aws_subnet.PublicSubnetC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:079736294594:listener/app/alb/e3df5bbc8a62a6c8/b8155185d4b1b58d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:079736294594:targetgroup/alb-target-group/c7992c8be7f0f634",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:079736294594:listener/app/alb/e3df5bbc8a62a6c8/b8155185d4b1b58d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:079736294594:loadbalancer/app/alb/e3df5bbc8a62a6c8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:079736294594:targetgroup/alb-target-group/c7992c8be7f0f634",
            "arn_suffix": "targetgroup/alb-target-group/c7992c8be7f0f634",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:079736294594:targetgroup/alb-target-group/c7992c8be7f0f634",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f2037a37b174485",
            "id": "nat-0068ae78a429908a0",
            "network_interface_id": "eni-088e262c1c76cb6e3",
            "private_ip": "10.0.0.139",
            "public_ip": "52.43.147.162",
            "subnet_id": "subnet-025a34a133a8a4a75"
          },
          "depends_on": [
            "aws_eip.natgw_a",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00170ba1f08e376e1",
            "id": "nat-0214cba10f321e09b",
            "network_interface_id": "eni-07649db62ee5e8b5c",
            "private_ip": "10.0.4.12",
            "public_ip": "34.215.38.169",
            "subnet_id": "subnet-00b7eec0dd38aa00a"
          },
          "depends_on": [
            "aws_eip.natgw_b",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a0d4ab15f1e21e4c",
            "id": "nat-0fd2147a1b2bda490",
            "network_interface_id": "eni-098f796df63aa42cd",
            "private_ip": "10.0.8.136",
            "public_ip": "52.41.181.254",
            "subnet_id": "subnet-0d9fcc86b294c82ce"
          },
          "depends_on": [
            "aws_eip.natgw_c",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicSubnetC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-0099f1f5250d17898",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "079736294594",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "open acl"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0153d1c0153394016",
            "owner_id": "079736294594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0068ae78a429908a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route A"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_nat_gateway.public_nat_a",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0758d28488e3af1c0",
            "owner_id": "079736294594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0214cba10f321e09b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route B"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_nat_gateway.public_nat_b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fc485a802f0c5f9a",
            "owner_id": "079736294594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0fd2147a1b2bda490",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route C"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_nat_gateway.public_nat_c",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0169828d8942647af",
            "owner_id": "079736294594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082391063d9f8600f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route A"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00bceb92730f425af",
            "owner_id": "079736294594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082391063d9f8600f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route B"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-078151dc621f2f07c",
            "owner_id": "079736294594",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-082391063d9f8600f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route C"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cf9245420c20e7a",
            "route_table_id": "rtb-0153d1c0153394016",
            "subnet_id": "subnet-03239b3ea46f37f9c"
          },
          "depends_on": [
            "aws_route_table.private_route_a",
            "aws_subnet.PrivateSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049756181c371211e",
            "route_table_id": "rtb-0758d28488e3af1c0",
            "subnet_id": "subnet-06aae53c5776c9301"
          },
          "depends_on": [
            "aws_route_table.private_route_b",
            "aws_subnet.PrivateSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03deefebe1e07543c",
            "route_table_id": "rtb-0fc485a802f0c5f9a",
            "subnet_id": "subnet-0ce77dedfbcb2c7ce"
          },
          "depends_on": [
            "aws_route_table.private_route_c",
            "aws_subnet.PrivateSubnetC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027db613df32e9ebf",
            "route_table_id": "rtb-0169828d8942647af",
            "subnet_id": "subnet-025a34a133a8a4a75"
          },
          "depends_on": [
            "aws_route_table.public_route_a",
            "aws_subnet.PublicSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b8ae2cd969de97f",
            "route_table_id": "rtb-00bceb92730f425af",
            "subnet_id": "subnet-00b7eec0dd38aa00a"
          },
          "depends_on": [
            "aws_route_table.public_route_b",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00439305693952f5f",
            "route_table_id": "rtb-078151dc621f2f07c",
            "subnet_id": "subnet-0d9fcc86b294c82ce"
          },
          "depends_on": [
            "aws_route_table.public_route_c",
            "aws_subnet.PublicSubnetC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:security-group/sg-02bfdd76d7fd4f22a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bfdd76d7fd4f22a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sec_elb",
            "name_prefix": null,
            "owner_id": "079736294594",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:security-group/sg-0332bdfd391cfee59",
            "description": "Used for autoscale group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0332bdfd391cfee59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sec_web",
            "name_prefix": null,
            "owner_id": "079736294594",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:subnet/subnet-03239b3ea46f37f9c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03239b3ea46f37f9c",
            "map_public_ip_on_launch": false,
            "owner_id": "079736294594",
            "tags": {
              "Name": "Private Subnet A"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:subnet/subnet-06aae53c5776c9301",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-06aae53c5776c9301",
            "map_public_ip_on_launch": false,
            "owner_id": "079736294594",
            "tags": {
              "Name": "Private Subnet B"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:subnet/subnet-0ce77dedfbcb2c7ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-0ce77dedfbcb2c7ce",
            "map_public_ip_on_launch": false,
            "owner_id": "079736294594",
            "tags": {
              "Name": "Private Subnet C"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:subnet/subnet-025a34a133a8a4a75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-025a34a133a8a4a75",
            "map_public_ip_on_launch": false,
            "owner_id": "079736294594",
            "tags": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:subnet/subnet-00b7eec0dd38aa00a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-00b7eec0dd38aa00a",
            "map_public_ip_on_launch": false,
            "owner_id": "079736294594",
            "tags": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:subnet/subnet-0d9fcc86b294c82ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-0d9fcc86b294c82ce",
            "map_public_ip_on_launch": false,
            "owner_id": "079736294594",
            "tags": {
              "Name": "Public Subnet C"
            },
            "vpc_id": "vpc-08453c71cbb1b9b1c"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:079736294594:vpc/vpc-08453c71cbb1b9b1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0fe30303a16c705e8",
            "default_route_table_id": "rtb-0a114477df080dbbb",
            "default_security_group_id": "sg-0a13f776a93418cf7",
            "dhcp_options_id": "dopt-1d508265",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08453c71cbb1b9b1c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a114477df080dbbb",
            "owner_id": "079736294594",
            "tags": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}